# rust-compiler-energy-study

./: README.md  analyze_npb.py  average.py  generate_graphs.py  mandelbrot.rs  run_experiment.sh  run_npb_all.sh
NPB-Rust/: LICENSE  README.md
NPB-Rust/NPB-RAYON/: Cargo.toml
NPB-Rust/NPB-RUST/: Cargo.toml
NPB-Rust/NPB-RUST/src/: bt.rs  cg.rs  ep.rs  ft.rs  is.rs  lu.rs  mg.rs  sp.rs
NPB-Rust/NPB-RUST/src/common/: randdp.rs
NPB-Rust/npb_all_results_class_A/: NPB_bt_A_1.85.0.csv  NPB_bt_A_1.90.0.csv  NPB_bt_A_stable.csv  NPB_cg_A_1.85.0.csv  NPB_cg_A_1.90.0.csv  NPB_cg_A_stable.csv  NPB_ep_A_1.85.0.csv  NPB_ep_A_1.90.0.csv  NPB_ep_A_stable.csv  NPB_ft_A_1.85.0.csv  NPB_ft_A_1.90.0.csv  NPB_ft_A_stable.csv  NPB_is_A_1.85.0.csv  NPB_is_A_1.90.0.csv  NPB_is_A_stable.csv  NPB_lu_A_1.85.0.csv  NPB_lu_A_1.90.0.csv  NPB_lu_A_stable.csv  NPB_mg_A_1.85.0.csv  NPB_mg_A_1.90.0.csv  NPB_mg_A_stable.csv  NPB_sp_A_1.85.0.csv  NPB_sp_A_1.90.0.csv  NPB_sp_A_stable.csv
NPB-Rust/npb_all_results_class_W/: NPB_bt_W_1.85.0.csv  NPB_bt_W_1.90.0.csv  NPB_bt_W_stable.csv  NPB_cg_W_1.85.0.csv  NPB_cg_W_1.90.0.csv  NPB_cg_W_stable.csv  NPB_ep_W_1.85.0.csv  NPB_ep_W_1.90.0.csv  NPB_ep_W_stable.csv  NPB_ft_W_1.85.0.csv  NPB_ft_W_1.90.0.csv  NPB_ft_W_stable.csv  NPB_is_W_1.85.0.csv  NPB_is_W_1.90.0.csv  NPB_is_W_stable.csv  NPB_lu_W_1.85.0.csv  NPB_lu_W_1.90.0.csv  NPB_lu_W_stable.csv  NPB_mg_W_1.85.0.csv  NPB_mg_W_1.90.0.csv  NPB_mg_W_stable.csv  NPB_sp_W_1.85.0.csv  NPB_sp_W_1.90.0.csv  NPB_sp_W_stable.csv
RAPL_Measurements/: install.sh
RAPL_Measurements/RAPL/: main
(+38 files in other folders)
