[package]
    name = "npb-rust"
    version = "0.1.0"
    edition = "2024"

[[bin]]
    name = "bt"
    path = "src/bt.rs"
[[bin]]
    name = "ep"
    path = "src/ep.rs"
[[bin]]
    name = "cg"
    path = "src/cg.rs"
[[bin]]
    name = "ft"
    path = "src/ft.rs"
[[bin]]
    name = "is"
    path = "src/is.rs"
[[bin]]
    name = "lu"
    path = "src/lu.rs"
[[bin]]
    name = "mg"
    path = "src/mg.rs"
[[bin]]
    name = "sp"
    path = "src/sp.rs"

[dependencies]

[lints.rust]
 unexpected_cfgs = {level = "warn", check-cfg = ['cfg(class,values("S","W","A","B","C","D","E","F"))','cfg(safe,values("true"))','cfg(timers,values("true"))']}
